--- a/privacy.html
+++ b/privacy.html
@@ -201,7 +201,7 @@
                     <li><strong>Portability:</strong> Receive your data in a machine-readable format</li>
                     <li><strong>Correction:</strong> Update your email address</li>
                 </ul>
-                <p>To exercise these rights, email us at: <a href="mailto:privacy@localmind.ai">privacy@localmind.ai</a></p>
+                <p>To exercise these rights, email us at: <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></p>
 
                 <h2>8. Children's Privacy</h2>
                 <p>LocalMind is not directed at children under 13. We do not knowingly collect information from minors.</p>
@@ -225,7 +225,7 @@
                 <h2>11. Contact Us</h2>
                 <p>Questions about privacy? Contact us:</p>
                 <ul>
-                    <li><strong>Email:</strong> <a href="mailto:privacy@localmind.ai">privacy@localmind.ai</a></li>
+                    <li><strong>Email:</strong> <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></li>
                     <li><strong>GitHub Issues:</strong> <a href="https://github.com/KaivalyaDeepTeam/localmind/issues" target="_blank">Report privacy concerns</a></li>
                     <li><strong>GitHub Discussions:</strong> <a href="https://github.com/KaivalyaDeepTeam/localmind/discussions" target="_blank">Community forum</a></li>
                 </ul>
