--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <style>
+        /* Unified Svetozar Technologies Theme - Matching LocalMind */
         :root {
             --primary: #4F46E5;
-            --primary-dark: #4338CA;
-            --primary-light: #6366F1;
+            --primary-dark: #3730A3;
+            --primary-light: #818CF8;
             --secondary: #7C3AED;
-            --accent: #10B981;
-            --accent-dark: #059669;
-            --background: #0F172A;
-            --surface: #1E293B;
-            --surface-light: #334155;
-            --text: #F8FAFC;
-            --text-secondary: #94A3B8;
-            --border: #334155;
+            --accent: #A78BFA;
+            --accent-green: #22c55e;
+            --background: #0a0a0a;
+            --surface: #111111;
+            --surface-light: #171717;
+            --surface-hover: #1f1f1f;
+            --text: #ffffff;
+            --text-secondary: #a1a1aa;
+            --text-muted: #71717a;
+            --border: #27272a;
+            --border-light: #3f3f46;
         }
 
         * {
@@ -56,7 +60,7 @@
             right: 0;
             z-index: 1000;
             padding: 1rem 2rem;
-            background: rgba(15, 23, 42, 0.8);
+            background: rgba(10, 10, 10, 0.8);
             backdrop-filter: blur(20px);
             border-bottom: 1px solid var(--border);
         }
@@ -146,9 +150,7 @@
             right: 0;
             bottom: 0;
             background:
-                radial-gradient(ellipse at 20% 20%, rgba(79, 70, 229, 0.15) 0%, transparent 50%),
-                radial-gradient(ellipse at 80% 80%, rgba(124, 58, 237, 0.15) 0%, transparent 50%),
-                radial-gradient(ellipse at 50% 50%, rgba(16, 185, 129, 0.05) 0%, transparent 70%);
+                radial-gradient(ellipse at top, rgba(79, 70, 229, 0.15) 0%, transparent 50%);
             pointer-events: none;
         }
 
@@ -231,20 +233,20 @@
         }
 
         .btn-secondary {
-            background: var(--surface);
+            background: var(--surface-light);
             color: var(--text);
             border: 1px solid var(--border);
         }
 
         .btn-secondary:hover {
-            background: var(--surface-light);
-            border-color: var(--primary);
+            background: var(--surface-hover);
+            border-color: var(--border-light);
         }
 
         /* Mission Section */
         .mission {
             padding: 6rem 2rem;
-            background: var(--surface);
+            background: var(--surface-light);
         }
 
         .container {
@@ -285,7 +287,7 @@
         }
 
         .mission-card {
-            background: var(--background);
+            background: var(--surface);
             border: 1px solid var(--border);
             border-radius: 16px;
             padding: 2rem;
@@ -293,7 +295,8 @@
         }
 
         .mission-card:hover {
-            border-color: var(--primary);
+            background: var(--surface-hover);
+            border-color: var(--border-light);
             transform: translateY(-4px);
         }
 
@@ -330,7 +333,7 @@
         }
 
         .product-card {
-            background: var(--surface);
+            background: var(--surface-light);
             border: 1px solid var(--border);
             border-radius: 20px;
             padding: 2.5rem;
@@ -340,7 +343,8 @@
         }
 
         .product-card:hover {
-            border-color: var(--primary);
+            background: var(--surface-hover);
+            border-color: var(--border-light);
             transform: translateY(-4px);
         }
 
@@ -368,7 +372,7 @@
 
         .product-badge {
             display: inline-block;
-            background: var(--accent);
+            background: var(--accent-green);
             color: white;
             font-size: 0.75rem;
             font-weight: 600;
@@ -408,7 +412,7 @@
 
         .product-features li::before {
             content: '✓';
-            color: var(--accent);
+            color: var(--accent-green);
             font-weight: bold;
         }
 
@@ -439,24 +443,30 @@
         }
 
         .value-card {
-            background: var(--background);
+            background: var(--surface-light);
             border: 1px solid var(--border);
             border-radius: 12px;
             padding: 1.5rem;
             text-align: center;
+            transition: all 0.3s;
+        }
+
+        .value-card:hover {
+            border-color: var(--border-light);
+            transform: translateY(-2px);
         }
 
         .value-number {
             font-size: 2.5rem;
             font-weight: 800;
-            background: linear-gradient(135deg, var(--primary), var(--accent));
+            background: linear-gradient(135deg, var(--primary-light), var(--accent));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
 
         .value-label {
-            color: var(--text-secondary);
+            color: var(--text-muted);
             font-size: 0.875rem;
             margin-top: 0.5rem;
         }
@@ -794,9 +804,9 @@
         window.addEventListener('scroll', () => {
             const nav = document.querySelector('.nav');
             if (window.scrollY > 50) {
-                nav.style.background = 'rgba(15, 23, 42, 0.95)';
+                nav.style.background = 'rgba(10, 10, 10, 0.95)';
             } else {
-                nav.style.background = 'rgba(15, 23, 42, 0.8)';
+                nav.style.background = 'rgba(10, 10, 10, 0.8)';
             }
         });
     </script>
