Fix language selector on all pages
- Update i18n.js to use onclick instead of addEventListener for reliability
- Standardize language selector container (id=languageSelector) across all pages
- Add i18n.js and main.js scripts to localwrite page
- Fix event listener cleanup to prevent duplicate handlers

--- a/localwrite/index.html
+++ b/localwrite/index.html
@@ -352,6 +352,7 @@
                 <a href="#features">Features</a>
                 <a href="#models">Models</a>
                 <a href="https://github.com/KaivalyaDeepTeam/LocalWrite" target="_blank">GitHub</a>
+                <div id="languageSelector" class="language-selector"></div>
                 <a href="#download" class="nav-cta">Download</a>
             </div>
         </div>
@@ -710,5 +711,7 @@
             nav.classList.toggle('scrolled', window.scrollY > 50);
         });
     </script>
+    <script src="../js/i18n.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
