--- a/privacy.html
+++ b/privacy.html
@@ -76,16 +76,7 @@
                 <a href="https://github.com/Svetozar-Technologies" target="_blank" data-i18n="nav.github">GitHub</a>
             </div>
             <div class="nav-actions">
-                <div class="language-selector">
-                    <button class="language-btn" id="languageBtn">
-                        <span id="currentFlag">🇬🇧</span>
-                        <span id="currentLang">EN</span>
-                        <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                            <path d="M2.5 4.5L6 8L9.5 4.5" stroke="currentColor" stroke-width="1.5" fill="none"/>
-                        </svg>
-                    </button>
-                    <div class="language-dropdown" id="languageDropdown"></div>
-                </div>
+                <div id="languageSelector" class="language-selector"></div>
                 <a href="./#products" class="btn btn-primary btn-sm" data-i18n="nav.get_started">Get Started</a>
             </div>
         </div>
