Add Svetozar Technologies custom logo to all pages
- Add custom logo image to assets/logo.png (275KB, 592x748 PNG)
- Update navbar and footer logos on main index.html
- Update navbar and footer logos on LocalWrite page
- Update navbar and footer logos on LocalPDF page
- Update navbar and footer logos on LocalMind page
- Add .logo-img and .footer-logo-img CSS styles to all stylesheets

--- a/localwrite/index.html
+++ b/localwrite/index.html
@@ -30,8 +30,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="../" class="logo">
-                <span class="logo-icon">S</span>
-                <span>Svetozar</span>
+                <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img">
             </a>
             <div class="nav-links">
                 <a href="#mission" data-i18n="nav.mission">Our Mission</a>
@@ -509,8 +508,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="../" class="logo">
-                        <span class="logo-icon">S</span>
-                        <span>Svetozar</span>
+                        <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img footer-logo-img">
                     </a>
                     <p class="footer-mission" data-i18n="footer.tagline">AI that's free, private, and yours.</p>
                     <p class="company" data-i18n="footer.company">A <strong>Svetozar Technologies</strong> Project</p>
