--- a/localmind/index.html
+++ b/localmind/index.html
@@ -37,8 +37,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="/" class="logo">
-                <img src="assets/logo.svg" alt="LocalMind" width="40" height="40">
-                <span>LocalMind</span>
+                <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img">
             </a>
             <div class="nav-links">
                 <a href="#mission" data-i18n="nav.mission">Our Mission</a>
@@ -763,8 +762,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="/" class="logo">
-                        <img src="assets/logo.svg" alt="LocalMind" width="40" height="40">
-                        <span>LocalMind</span>
+                        <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img footer-logo-img">
                     </a>
                     <p class="footer-mission" data-i18n="footer.tagline">AI that's free, private, and yours.</p>
                     <p class="company" data-i18n="footer.company">A <strong>Svetozar Technologies</strong> Project</p>
