Improve logo visibility and add company tagline
- Increase logo height to 56px in navbar, 100px in footer
- Add company name "Svetozar Technologies" next to logo
- Add tagline "Open World" aligned with mission
- Add logo-text, logo-name, logo-tagline CSS styles
- Update all pages: main, LocalMind, LocalWrite, LocalPDF

--- a/localmind/index.html
+++ b/localmind/index.html
@@ -38,6 +38,10 @@
         <div class="container">
             <a href="/" class="logo">
                 <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img">
+                <div class="logo-text">
+                    <span class="logo-name">Svetozar Technologies</span>
+                    <span class="logo-tagline">Open World</span>
+                </div>
             </a>
             <div class="nav-links">
                 <a href="#mission" data-i18n="nav.mission">Our Mission</a>
@@ -761,8 +765,12 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <a href="/" class="logo">
+                    <a href="/" class="logo footer-logo">
                         <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img footer-logo-img">
+                        <div class="logo-text">
+                            <span class="logo-name">Svetozar Technologies</span>
+                            <span class="logo-tagline">Open World</span>
+                        </div>
                     </a>
                     <p class="footer-mission" data-i18n="footer.tagline">AI that's free, private, and yours.</p>
                     <p class="company" data-i18n="footer.company">A <strong>Svetozar Technologies</strong> Project</p>
