--- a/localpdf/index.html
+++ b/localpdf/index.html
@@ -31,6 +31,10 @@
         <div class="container">
             <a href="../" class="logo">
                 <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img">
+                <div class="logo-text">
+                    <span class="logo-name">Svetozar Technologies</span>
+                    <span class="logo-tagline">Open World</span>
+                </div>
             </a>
             <div class="nav-links">
                 <a href="#mission" data-i18n="nav.mission">Our Mission</a>
@@ -496,11 +500,14 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <a href="../" class="logo">
+                    <a href="../" class="logo footer-logo">
                         <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img footer-logo-img">
+                        <div class="logo-text">
+                            <span class="logo-name">Svetozar Technologies</span>
+                            <span class="logo-tagline">Open World</span>
+                        </div>
                     </a>
                     <p class="footer-mission" data-i18n="footer.tagline">AI that is free, private, and yours.</p>
-                    <p class="company" data-i18n="footer.company">A <strong>Svetozar Technologies</strong> Project</p>
                 </div>
                 <div class="footer-links">
                     <h4 data-i18n="footer.products_title">Products</h4>
