--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <div class="container">
             <a href="/" class="logo">
                 <img src="assets/logo.png" alt="Svetozar Technologies" class="logo-img">
+                <div class="logo-text">
+                    <span class="logo-name">Svetozar Technologies</span>
+                    <span class="logo-tagline">Open World</span>
+                </div>
             </a>
             <div class="nav-links">
                 <a href="#mission" data-i18n="nav.mission">Our Mission</a>
@@ -327,8 +331,12 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <a href="/" class="logo">
+                    <a href="/" class="logo footer-logo">
                         <img src="assets/logo.png" alt="Svetozar Technologies" class="logo-img footer-logo-img">
+                        <div class="logo-text">
+                            <span class="logo-name">Svetozar Technologies</span>
+                            <span class="logo-tagline">Open World</span>
+                        </div>
                     </a>
                     <p class="footer-mission" data-i18n="footer.tagline">AI that's free, private, and yours.</p>
                 </div>
