Professional logo redesign
- Remove white background from logo (transparent)
- Update tagline: "Open World" → "Free AI. Private AI."
- Professional text styling with gradient tagline
- Uppercase tagline with letter-spacing
- Improved typography and spacing

--- a/localmind/index.html
+++ b/localmind/index.html
@@ -40,7 +40,7 @@
                 <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img">
                 <div class="logo-text">
                     <span class="logo-name">Svetozar Technologies</span>
-                    <span class="logo-tagline">Open World</span>
+                    <span class="logo-tagline">Free AI. Private AI.</span>
                 </div>
             </a>
             <div class="nav-links">
@@ -769,7 +769,7 @@
                         <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img footer-logo-img">
                         <div class="logo-text">
                             <span class="logo-name">Svetozar Technologies</span>
-                            <span class="logo-tagline">Open World</span>
+                            <span class="logo-tagline">Free AI. Private AI.</span>
                         </div>
                     </a>
                     <p class="footer-mission" data-i18n="footer.tagline">AI that's free, private, and yours.</p>
