--- a/localpdf/index.html
+++ b/localpdf/index.html
@@ -33,7 +33,7 @@
                 <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img">
                 <div class="logo-text">
                     <span class="logo-name">Svetozar Technologies</span>
-                    <span class="logo-tagline">Open World</span>
+                    <span class="logo-tagline">Free AI. Private AI.</span>
                 </div>
             </a>
             <div class="nav-links">
@@ -504,7 +504,7 @@
                         <img src="../assets/logo.png" alt="Svetozar Technologies" class="logo-img footer-logo-img">
                         <div class="logo-text">
                             <span class="logo-name">Svetozar Technologies</span>
-                            <span class="logo-tagline">Open World</span>
+                            <span class="logo-tagline">Free AI. Private AI.</span>
                         </div>
                     </a>
                     <p class="footer-mission" data-i18n="footer.tagline">AI that is free, private, and yours.</p>
