Overhaul website: uniform product pages, new logo, privacy consolidation
- Align all 3 product pages (LocalMind, LocalWrite, LocalPDF) to same
  section structure: Nav, Hero, Social Proof, Features, Use Cases,
  How It Works, Comparison, Testimonials, Download/Notify, FAQ, Footer
- Switch LocalWrite from custom CSS to shared css/style.css framework
- Replace international testimonials with Indian-only personas
- Remove mission/manifesto sections from product pages (homepage only)
- Add FAQ and Use Cases sections to LocalPDF
- Update logo with dark-background visibility enhancements
- Consolidate privacy policy into single company-wide page with redirects
- Fix broken anchor navigation (selector .nav → .navbar in main.js)

--- a/localmind/privacy.html
+++ b/localmind/privacy.html
@@ -2,288 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - LocalMind</title>
-    <meta name="description" content="LocalMind Privacy Policy - Learn how we protect your privacy and handle data.">
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="assets/logo.svg">
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-
-    <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <style>
-        .privacy-page {
-            padding: 120px 0 80px;
-            min-height: 100vh;
-        }
-
-        .privacy-content {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .privacy-content h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
-        .privacy-content .last-updated {
-            color: var(--color-text-secondary);
-            margin-bottom: 3rem;
-            font-size: 0.95rem;
-        }
-
-        .privacy-content h2 {
-            font-size: 2rem;
-            margin: 3rem 0 1.5rem;
-            color: var(--color-text);
-        }
-
-        .privacy-content h3 {
-            font-size: 1.5rem;
-            margin: 2rem 0 1rem;
-            color: var(--color-primary-light);
-        }
-
-        .privacy-content p {
-            color: var(--color-text-secondary);
-            line-height: 1.8;
-            margin-bottom: 1.5rem;
-        }
-
-        .privacy-content ul {
-            color: var(--color-text-secondary);
-            line-height: 1.8;
-            margin: 1rem 0 1.5rem 2rem;
-        }
-
-        .privacy-content li {
-            margin-bottom: 0.5rem;
-        }
-
-        .privacy-content strong {
-            color: var(--color-text);
-        }
-
-        .privacy-content a {
-            color: var(--color-primary-light);
-            text-decoration: underline;
-        }
-
-        .privacy-content a:hover {
-            color: var(--color-primary);
-        }
-
-        .privacy-highlight {
-            background: rgba(79, 70, 229, 0.1);
-            border-left: 3px solid var(--color-primary);
-            padding: 1.5rem;
-            border-radius: var(--radius-md);
-            margin: 2rem 0;
-        }
-
-        .back-link {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            color: var(--color-primary-light);
-            text-decoration: none;
-            margin-bottom: 2rem;
-            transition: all var(--transition-fast);
-        }
-
-        .back-link:hover {
-            color: var(--color-primary);
-            transform: translateX(-4px);
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=../privacy.html">
+    <title>Redirecting to Privacy Policy</title>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo">
-                <img src="assets/logo.svg" alt="LocalMind" width="40" height="40">
-                <span>LocalMind</span>
-            </a>
-            <div class="nav-links">
-                <a href="index.html#mission">Our Mission</a>
-                <a href="index.html#product">Product</a>
-                <a href="index.html#download">Download</a>
-                <a href="https://github.com/Svetozar-Technologies/LocalMind" target="_blank" class="btn btn-outline">GitHub</a>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Privacy Policy Content -->
-    <section class="privacy-page">
-        <div class="container">
-            <div class="privacy-content">
-                <a href="index.html" class="back-link">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polyline points="15 18 9 12 15 6"/>
-                    </svg>
-                    Back to Home
-                </a>
-
-                <h1>Privacy Policy</h1>
-                <p class="last-updated">Last Updated: January 18, 2026</p>
-
-                <div class="privacy-highlight">
-                    <h3>🔒 Our Core Promise</h3>
-                    <p><strong>Your transcriptions and audio files never leave your device.</strong> LocalMind is designed from the ground up to process everything locally. We have zero access to your data.</p>
-                </div>
-
-                <h2>1. Desktop Application - Zero Data Collection</h2>
-                <p>The LocalMind desktop application:</p>
-                <ul>
-                    <li><strong>Processes 100% locally:</strong> All audio transcription and quality analysis happens on your device</li>
-                    <li><strong>No telemetry:</strong> We do not collect usage statistics, crash reports, or any form of analytics from the app</li>
-                    <li><strong>No network calls:</strong> After the initial AI model download, the app works completely offline</li>
-                    <li><strong>No account required:</strong> You don't need to create an account or provide any personal information to use LocalMind</li>
-                    <li><strong>Your files stay yours:</strong> All transcriptions, reports, and exports are stored locally on your device</li>
-                </ul>
-
-                <h2>2. Website Analytics (Privacy-Friendly)</h2>
-                <p>This website (localmind.github.io) uses <strong>Plausible Analytics</strong>, a privacy-first analytics service:</p>
-                <ul>
-                    <li><strong>No cookies:</strong> Plausible does not use cookies or track you across websites</li>
-                    <li><strong>No personal data:</strong> We cannot identify individual visitors</li>
-                    <li><strong>GDPR compliant:</strong> All data is anonymized and aggregated</li>
-                    <li><strong>Transparent:</strong> You can view our public analytics dashboard (if we make it public)</li>
-                </ul>
-                <p>We collect basic anonymous metrics like page views and referral sources to understand how people discover LocalMind. Nothing personally identifiable.</p>
-
-                <h2>3. Email Newsletter (Opt-In Only)</h2>
-                <p>If you choose to provide your email address to receive updates:</p>
-                <ul>
-                    <li><strong>Voluntary only:</strong> Email collection is 100% opt-in. You can skip and download directly.</li>
-                    <li><strong>Stored securely:</strong> Emails are stored via Formspree, a privacy-focused form service</li>
-                    <li><strong>Limited use:</strong> We only use your email to notify you of major updates, new features (like SRT export), and security fixes</li>
-                    <li><strong>No selling:</strong> We will never sell, rent, or share your email with third parties</li>
-                    <li><strong>Easy unsubscribe:</strong> Every email includes a one-click unsubscribe link</li>
-                    <li><strong>No spam:</strong> We send emails sparingly - only for significant updates</li>
-                </ul>
-
-                <h2>4. Feature Survey Data</h2>
-                <p>When you opt-in to the email newsletter, you can optionally check which features you're interested in (e.g., SRT export, real-time transcription):</p>
-                <ul>
-                    <li><strong>Purpose:</strong> Helps us prioritize development based on user demand</li>
-                    <li><strong>Anonymous aggregation:</strong> We analyze trends (e.g., "80% want SRT export") not individual responses</li>
-                    <li><strong>No profiling:</strong> We don't build user profiles or track behavior</li>
-                </ul>
-
-                <h2>5. No Third-Party Tracking</h2>
-                <p>This website does NOT use:</p>
-                <ul>
-                    <li>❌ Google Analytics</li>
-                    <li>❌ Facebook Pixel</li>
-                    <li>❌ Third-party cookies</li>
-                    <li>❌ Fingerprinting techniques</li>
-                    <li>❌ Cross-site tracking</li>
-                </ul>
-
-                <h2>6. Data Security</h2>
-                <p><strong>Desktop App:</strong> Since all data stays on your device, security is determined by your operating system and storage encryption (e.g., FileVault on macOS).</p>
-                <p><strong>Website:</strong> This site is served over HTTPS. Email submissions to Formspree are encrypted in transit.</p>
-
-                <h2>7. Your Rights (GDPR Compliance)</h2>
-                <p>If you've provided your email, you have the right to:</p>
-                <ul>
-                    <li><strong>Access:</strong> Request a copy of your data (just your email)</li>
-                    <li><strong>Deletion:</strong> Request immediate deletion from our email list</li>
-                    <li><strong>Portability:</strong> Receive your data in a machine-readable format</li>
-                    <li><strong>Correction:</strong> Update your email address</li>
-                </ul>
-                <p>To exercise these rights, email us at: <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></p>
-
-                <h2>8. Children's Privacy</h2>
-                <p>LocalMind is not directed at children under 13. We do not knowingly collect information from minors.</p>
-
-                <h2>9. Changes to This Policy</h2>
-                <p>We may update this privacy policy as we add new features (e.g., Windows support, cloud sync options). Material changes will be announced via:</p>
-                <ul>
-                    <li>Email notification (if you're subscribed)</li>
-                    <li>Prominent notice on this website</li>
-                    <li>GitHub repository announcements</li>
-                </ul>
-
-                <h2>10. Open Source Transparency</h2>
-                <p>LocalMind is fully open source under the MIT license. You can:</p>
-                <ul>
-                    <li><strong>Audit the code:</strong> <a href="https://github.com/Svetozar-Technologies/LocalMind" target="_blank">View source on GitHub</a></li>
-                    <li><strong>Verify our claims:</strong> Check that the desktop app makes no network calls (except model downloads)</li>
-                    <li><strong>Build from source:</strong> Compile the app yourself for maximum trust</li>
-                </ul>
-
-                <h2>11. Contact Us</h2>
-                <p>Questions about privacy? Contact us:</p>
-                <ul>
-                    <li><strong>Email:</strong> <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></li>
-                    <li><strong>GitHub Issues:</strong> <a href="https://github.com/Svetozar-Technologies/LocalMind/issues" target="_blank">Report privacy concerns</a></li>
-                    <li><strong>GitHub Discussions:</strong> <a href="https://github.com/Svetozar-Technologies/LocalMind/discussions" target="_blank">Community forum</a></li>
-                </ul>
-
-                <div class="privacy-highlight" style="margin-top: 3rem;">
-                    <h3>Summary</h3>
-                    <p><strong>Desktop app:</strong> Zero data collection. Everything stays on your device.<br>
-                    <strong>Website:</strong> Privacy-first analytics (no cookies, no personal data).<br>
-                    <strong>Email:</strong> Opt-in only, no spam, easy unsubscribe.<br>
-                    <strong>Promise:</strong> We will never compromise your privacy for profit.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-brand">
-                    <a href="index.html" class="logo">
-                        <img src="assets/logo.svg" alt="LocalMind" width="40" height="40">
-                        <span>LocalMind</span>
-                    </a>
-                    <p class="footer-mission">AI that's free, private, and yours.</p>
-                    <p class="company">A <strong>Svetozar Technologies</strong> Project</p>
-                </div>
-                <div class="footer-links">
-                    <h4>Mission</h4>
-                    <ul>
-                        <li><a href="index.html#mission">Our Beliefs</a></li>
-                        <li><a href="index.html#product">The Product</a></li>
-                        <li><a href="index.html#download">Get Started</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Community</h4>
-                    <ul>
-                        <li><a href="https://github.com/Svetozar-Technologies/LocalMind" target="_blank">GitHub</a></li>
-                        <li><a href="https://github.com/Svetozar-Technologies/LocalMind/discussions" target="_blank">Discussions</a></li>
-                        <li><a href="https://github.com/Svetozar-Technologies/LocalMind/issues" target="_blank">Report Issues</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Legal</h4>
-                    <ul>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
-                        <li><a href="https://github.com/Svetozar-Technologies/LocalMind/blob/main/LICENSE" target="_blank">MIT License</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Svetozar Technologies</p>
-                <p class="footer-tagline">Building AI that serves humanity, not corporations.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="js/main.js"></script>
+    <p>Redirecting to <a href="../privacy.html">Privacy Policy</a>...</p>
 </body>
 </html>
