--- a/privacy.html
+++ b/privacy.html
@@ -66,9 +66,12 @@
     <!-- Navigation -->
     <nav class="nav">
         <div class="container nav-container">
-            <a href="./" class="nav-logo">
-                <span class="logo-icon">S</span>
-                <span>Svetozar</span>
+            <a href="./" class="logo">
+                <img src="assets/logo.png" alt="Svetozar Technologies" class="logo-img">
+                <div class="logo-text">
+                    <span class="logo-name">Svetozar Technologies</span>
+                    <span class="logo-tagline">Free AI. Private AI.</span>
+                </div>
             </a>
             <div class="nav-links">
                 <a href="./#mission" data-i18n="nav.mission">Mission</a>
@@ -84,78 +87,108 @@
 
     <main class="privacy-content">
         <h1>Privacy Policy</h1>
-        <p class="last-updated">Last updated: January 2025</p>
+        <p class="last-updated">Last updated: February 2026</p>
 
         <div class="privacy-highlight">
             <h3>The Short Version</h3>
-            <p style="margin-bottom: 0;">We don't collect your data. Our products run 100% locally on your device. Your files, your text, your audio - none of it ever touches our servers because we don't have servers to touch. That's not just a feature, it's our founding principle.</p>
+            <p style="margin-bottom: 0;">We don't collect your data. Every Svetozar Technologies product runs 100% locally on your device. Your files, text, audio, and documents never touch our servers — because we don't have servers. That's not a feature. It's our founding principle.</p>
         </div>
 
-        <h2>Our Philosophy</h2>
-        <p>At Svetozar Technologies, we believe privacy is a fundamental right, not a feature to be sold. We build AI tools that work entirely on your device because we believe that's how software should work.</p>
+        <h2>1. Our Philosophy</h2>
+        <p>At Svetozar Technologies, we believe privacy is a fundamental right, not a premium feature. We build AI tools that work entirely on your device because that's how software should work. No accounts. No cloud processing. No data collection. Ever.</p>
 
-        <h2>What We Don't Collect</h2>
-        <p>Let's be clear about what we <strong>never</strong> collect:</p>
+        <h2>2. Desktop Applications — Zero Data Collection</h2>
+        <p>This policy applies to all Svetozar Technologies desktop applications, including <strong>LocalMind</strong> (audio transcription), <strong>LocalWrite</strong> (AI writing assistant), and <strong>LocalPDF</strong> (PDF intelligence). Every application:</p>
         <ul>
-            <li><strong>Your files and content:</strong> Documents, audio files, PDFs, and text you process with our tools never leave your device.</li>
-            <li><strong>Usage data:</strong> We don't track how often you use our apps, what features you use, or how you use them.</li>
-            <li><strong>Personal information:</strong> We don't require accounts, so we don't have your email, name, or any other personal data.</li>
-            <li><strong>Analytics and telemetry:</strong> Our apps don't phone home. Period.</li>
-            <li><strong>Error reports:</strong> If something crashes, it stays on your machine. We don't collect crash reports.</li>
+            <li><strong>Processes 100% locally:</strong> All AI processing — transcription, writing, summarization, PDF analysis — happens entirely on your device.</li>
+            <li><strong>Collects zero telemetry:</strong> We do not collect usage statistics, crash reports, performance metrics, or any form of analytics from our apps.</li>
+            <li><strong>Makes no network calls:</strong> After the initial AI model download, all applications work completely offline.</li>
+            <li><strong>Requires no account:</strong> You never need to create an account or provide personal information to use any of our products.</li>
+            <li><strong>Keeps your files local:</strong> All outputs — transcriptions, documents, reports, and exports — are stored only on your device.</li>
         </ul>
 
-        <h2>How Our Products Work</h2>
-        <p>All Svetozar products are designed to function entirely offline:</p>
+        <h2>3. Website Analytics</h2>
+        <p>When you visit our website (svetozar-technologies.github.io), we use <strong>Plausible Analytics</strong>, a privacy-first analytics service:</p>
         <ul>
-            <li><strong>LocalMind:</strong> Audio transcription happens entirely on your device using locally-installed AI models.</li>
-            <li><strong>LocalWrite:</strong> Writing enhancement is processed by AI models running on your computer.</li>
-            <li><strong>LocalPDF:</strong> PDF processing uses local algorithms with no cloud involvement.</li>
+            <li><strong>No cookies:</strong> Plausible does not use cookies or track you across websites.</li>
+            <li><strong>No personal data:</strong> We cannot identify individual visitors.</li>
+            <li><strong>GDPR compliant:</strong> All data is anonymized and aggregated.</li>
         </ul>
-        <p>After initial download, our applications work without any internet connection. The only network requests occur when you choose to check for updates or download new AI models.</p>
+        <p>We collect only basic anonymous metrics like page views and referral sources to understand how people discover our products. Nothing personally identifiable.</p>
 
-        <h2>Website Privacy</h2>
-        <p>When you visit our website (svetozar-technologies.github.io):</p>
+        <h2>4. No Third-Party Tracking</h2>
+        <p>Our website and applications do NOT use:</p>
         <ul>
-            <li>We use privacy-respecting analytics (Plausible) that doesn't use cookies or track individuals.</li>
-            <li>We don't use advertising trackers or third-party marketing tools.</li>
-            <li>If you sign up for update notifications, we only store your email address for that purpose.</li>
+            <li>Google Analytics or any invasive analytics</li>
+            <li>Facebook Pixel or advertising trackers</li>
+            <li>Third-party cookies of any kind</li>
+            <li>Browser fingerprinting techniques</li>
+            <li>Cross-site tracking scripts</li>
         </ul>
 
-        <h2>Email Communications</h2>
+        <h2>5. Email Communications</h2>
         <p>If you voluntarily provide your email address for product updates:</p>
         <ul>
-            <li>We only send infrequent updates about major product releases.</li>
-            <li>We never share, sell, or rent your email to third parties.</li>
-            <li>Every email includes an unsubscribe link for immediate removal.</li>
+            <li><strong>100% opt-in:</strong> Email collection is always voluntary. You can download and use all products without providing any personal information.</li>
+            <li><strong>Stored securely:</strong> Emails are handled via Formspree, a privacy-focused form service.</li>
+            <li><strong>Limited use:</strong> We only send infrequent notifications about major product releases, new features, and security updates.</li>
+            <li><strong>Never shared:</strong> We will never sell, rent, or share your email with third parties.</li>
+            <li><strong>Easy unsubscribe:</strong> Every email includes a one-click unsubscribe link.</li>
         </ul>
 
-        <h2>Third-Party Services</h2>
-        <p>Our applications don't integrate with third-party services that could compromise your privacy. When you download AI models, those downloads come directly from Hugging Face, a trusted open-source model repository.</p>
+        <h2>6. Third-Party Services</h2>
+        <p>Our applications do not integrate with third-party services that could compromise your privacy. The only external dependency is the initial AI model download, which comes directly from <strong>Hugging Face</strong>, a trusted open-source model repository. After that, everything runs offline.</p>
 
-        <h2>Open Source Transparency</h2>
-        <p>All our code is open source and available on GitHub under the MIT license. You can:</p>
+        <h2>7. Data Security</h2>
+        <p><strong>Desktop applications:</strong> Since all data stays on your device, security is determined by your operating system's built-in protections (e.g., FileVault on macOS, BitLocker on Windows).</p>
+        <p><strong>Website:</strong> This site is served over HTTPS. Any form submissions are encrypted in transit.</p>
+
+        <h2>8. Your Rights (GDPR Compliance)</h2>
+        <p>If you've provided your email address, you have the right to:</p>
         <ul>
-            <li>Audit every line of code to verify our privacy claims.</li>
-            <li>Build the applications yourself from source.</li>
-            <li>Modify the code to meet your specific privacy requirements.</li>
+            <li><strong>Access:</strong> Request a copy of any data we hold (limited to your email).</li>
+            <li><strong>Deletion:</strong> Request immediate removal from our email list.</li>
+            <li><strong>Portability:</strong> Receive your data in a machine-readable format.</li>
+            <li><strong>Correction:</strong> Update your email address at any time.</li>
         </ul>
+        <p>To exercise these rights, contact us at: <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></p>
 
-        <h2>Children's Privacy</h2>
-        <p>Since we don't collect any personal data, there's no specific concern about children's data. Our tools can be safely used by people of all ages.</p>
-
-        <h2>Changes to This Policy</h2>
-        <p>If we ever update this privacy policy, we'll post the changes here with an updated date. However, our core commitment - that your data stays on your device - will never change.</p>
-
-        <h2>Contact</h2>
-        <p>Questions about our privacy practices? Open an issue on our GitHub repositories or join our discussions:</p>
+        <h2>9. Open Source Transparency</h2>
+        <p>All Svetozar Technologies products are open source under the MIT license. You can:</p>
         <ul>
-            <li><a href="https://github.com/Svetozar-Technologies" target="_blank">GitHub Organization</a></li>
-            <li><a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank">Community Discussions</a></li>
+            <li><strong>Audit every line of code</strong> to verify our privacy claims across all repositories.</li>
+            <li><strong>Verify network behavior</strong> — confirm our applications make no unauthorized network calls.</li>
+            <li><strong>Build from source</strong> — compile any application yourself for maximum trust.</li>
+            <li><strong>Modify freely</strong> — adapt the code to meet your specific privacy requirements.</li>
+        </ul>
+        <p>Visit our repositories: <a href="https://github.com/Svetozar-Technologies" target="_blank">github.com/Svetozar-Technologies</a></p>
+
+        <h2>10. Children's Privacy</h2>
+        <p>Our products are not directed at children under 13. However, since we collect no personal data through our desktop applications, they can be safely used by people of all ages.</p>
+
+        <h2>11. Changes to This Policy</h2>
+        <p>We may update this privacy policy as we release new products or features. Material changes will be announced via:</p>
+        <ul>
+            <li>Email notification (if you're subscribed)</li>
+            <li>Prominent notice on this website</li>
+            <li>GitHub repository announcements</li>
+        </ul>
+        <p>Our core commitment — that your data stays on your device — will never change.</p>
+
+        <h2>12. Contact Us</h2>
+        <p>Questions about our privacy practices? Reach out through any of these channels:</p>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/Svetozar-Technologies" target="_blank">Organization Page</a></li>
+            <li><strong>Discussions:</strong> <a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank">Community Forum</a></li>
         </ul>
 
         <div class="privacy-highlight" style="margin-top: 3rem;">
             <h3>Our Promise</h3>
-            <p style="margin-bottom: 0;">We built Svetozar Technologies because we were tired of AI tools that treat user data as a product. Your privacy isn't negotiable. It's the foundation of everything we build.</p>
+            <p style="margin-bottom: 0;"><strong>Desktop apps:</strong> Zero data collection. Everything stays on your device.<br>
+            <strong>Website:</strong> Privacy-first analytics. No cookies. No personal data.<br>
+            <strong>Email:</strong> Opt-in only. No spam. Easy unsubscribe.<br>
+            <strong>Always:</strong> We will never compromise your privacy for profit.</p>
         </div>
     </main>
 
